feat(background): refactor background registration requests
